upate nav styling to correct spacing issue

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 img {
-    width: 150px;
     display: inline-flex;
     padding: 50px;
 }
@@ -15,12 +14,15 @@ a {
     text-decoration: none;
     color: white;
 }
-ul {
-    list-style-type: none;
-    display: inline-flex;
-    padding: 50px; 
-    margin: auto 100px;
-    float: right;
+
+/*nav styling*/
+.nav {
+    padding: 50px
+}
+
+.nav li {
+    display: inline;
+    padding: 5px;
 }
 
 button {
@@ -33,19 +35,33 @@ button {
     color: white;
 }
 
-.header-content img {
-    margin: auto 100px;
-    float: right;
-    width: 400px;
-    height: 250px;
-}
-
-
-
 .header, .header-content {
     background-color: #1f2937;
     margin: 0;
 }
+.header-content {
+    justify-content: space-between;
+    align-items: center;
+}
+
+/*image place holder*/
+
+.image-placeholder {
+    background-color: #eee;
+    display: flex;
+    width: 400px;
+    height: 200px;
+    margin: 0 auto;
+
+}
+
+.image-placeholder > h3 {
+align-self: center;
+text-align: center;
+width: 100%;
+}
+
+
 
 .hero-text {
     color: white;
@@ -60,7 +76,7 @@ button {
 .header {
 display: flex;
 justify-content: space-between;
-align-items: center;
+flex: 1;
 }
 
 p {
